# DevPulse

./: .env.example  .gitignore  README.md  aggregator.py  alembic.ini  database.py  docker-compose.yml  email_service.py  main.py  models.py  pyproject.toml  security.py  seed.py
migrations/: env.py
migrations/versions/: 3cecb8aa6500_add_update_schemas_and_fix_logs_user_.py  5a3a496c95a5_add_users_and_join_user_to_projects.py  bb57733cfc6b_initial_migration_setup.py  c8ff1cccf105_add_dailyprojectmetric_table.py  d6ef64a150a4_add_time_tracking_to_task.py  ec6df006674c_add_repository_aggregation_metrics_.py  f5e9f0241d6b_fix_project_user_foreign_key_column.py
